--- a/week_7/styles/style.css
+++ b/week_7/styles/style.css
@@ -1,6 +1,6 @@
 html {
     font-family: "Open Sans", sans-serif;
-    background-color: #00539f;
+    background-color: #4b2e83;
 }
 
 h1 {
@@ -11,7 +11,7 @@ h1 {
 body {
     width: 600px;
     margin: 0 auto;
-    background-color: #ff9500;
+    background-color: #b7a57a;
     padding: 0 20px 20px 20px;
     border: 5px solid black;
 }
